added submit bottom

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 <input type='checkbox' value="Not clear" name="Not sure">  </input> <br>
 </div> <br>
 
-
-<textarea></textarea>
+<textarea></textarea><br>
+<input id='submit' type='submit'></input>
 
 </form>
     
