added radio buttons and textarea

--- a/index.html
+++ b/index.html
@@ -22,17 +22,35 @@
     <label id='email-label'>Email</label>
       <br><input id='number' type="number"
       placeholder='number' min="1" max="100" required></input>
-    <label id="number-label">Number</label>
-    <select id='dropdown'> 
+<label id="number-label">Number
+</label>
+<select id='dropdown'> 
       <option></option>
       <option></option>
       <option></option>
-      </select>
-      <input type='radio'></input>
-      <input type='radio'></input>
-      <input type='radio'></input>
-    
-    </form>
+</select>
+<br>
+<br>
+
+<div>
+<input type='radio' value="Absolutely" name="Definitely"> </input> <br>
+<input type='radio' value="Absolutely" name="Definitely"> </input> <br>
+</div> <br>
+
+<div>
+<input type='radio' value="Perhaps" name="Maybe">  </input> <br>
+<input type='radio' value="Perhaps" name="Maybe">  </input> <br>
+</div> <br>
+
+<div>
+<input type='checkbox' value="Not clear" name="Not sure">  </input> <br>
+<input type='checkbox' value="Not clear" name="Not sure">  </input> <br>
+</div> <br>
+
+
+<textarea></textarea>
+
+</form>
     
     <script  src="js/index.js"></script>
   </body>
